Added functinalities to the user interface.

--- a/bin/application.properties
+++ b/bin/application.properties
@@ -1,6 +1,6 @@
 #application
-app.name=Diary
-app.description=${app.name} is a Spring Boot application.
+app.name = Diary
+app.description =${app.name} is a Spring Boot application.
 
 #server
 server.port=7070
@@ -17,7 +17,7 @@ jsondoc.basePath=http://localhost:7070
 jsondoc.packages[0]=com.diary.controller
 jsondoc.packages[1]=com.diary.domain
 jsondoc.packages[2]=com.diary.restresponse
-jsondoc,packages[3]=com.diary.entity
+jsondoc.packages[3]=com.diary.entity
 #jsondoc.playgroundEnabled=true
 #jsondoc.displayMethodAs=URI
 
