--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     compile 'commons-codec:commons-codec:1.9'
     compile 'com.googlecode.json-simple:json-simple:1.1'
     
+    compile("org.apache.tomcat.embed:tomcat-embed-jasper")
     
     runtime('org.hsqldb:hsqldb:2.3.1')
     
